--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "index.js",
-    "build": "npm i"
+    "dev": "nodemon index.js",
+    "start": "nodemonindex.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
