--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "nodemon index.js",
+    "start": "node_modules/nodemon/bin/nodemon.js index.js",
     "build": "npm install"
   },
   "keywords": [],
